<resources>
    <string name="app_name">Brime</string>
    <string name="app_id">1049320118517916</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="appwidget_text">Brime</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="create_note_hint">Note Title</string>
    <string name="create_note_desc_hint">What is on your mind?</string>
    <string name="content_authority">com.procleus.brime</string>
    <string name="aboutus_1">Brime builds apps and products that are defining the way individuals and teams work today.</string>
    <string name="aboutus_2">As one workspace that lives across your phone, tablet, and computer, Brime is the place you write free from distraction, collect information, find what you need, and present your ideas to the world.</string>
    <string name="aboutus_3">Whatever you’re working toward, Brime’s job is to make sure you get there.</string>
    <string name="aboutus_4">About Us</string>
    <string name="acc_info_hint_1">FirstName</string>
    <string name="acc_info_hint_2">LastName</string>
    <string name="acc_info_hint_3">Email</string>
    <string name="acc_info_hint_4">Date of Birth</string>
    <string name="acc_info_date">YYYY-MM-DD</string>
    <string name="edit_notes_text_1">Hello Buddy</string>
    <string name="edit_notes_text_">Nice</string>
    <string name="getstarted_text_1">Next</string>
    <string name="getstarted_text_2">Skip</string>
    <string name="intro_getstarted">GET STARTED</string>
    <string name="intro_punchline">NOTE TAKING MADE EASY</string>
    <string name="main_drawer_publicnotes">Public Notes</string>
    <string name="main_drawer_priv_notes">Private Notes</string>
    <string name="main_drawer_labels">Labels</string>
    <string name="main_drawer_trash">Trash</string>
    <string name="main_drawer_settings">Settings</string>
    <string name="main_drawer_cloudsync">Cloud Sync</string>
    <string name="main_drawer_other">Other</string>
    <string name="main_drawer_explore">Explore</string>
    <string name="main_drawer_share">Share</string>
    <string name="intro_title">BRIME</string>
    <string name="intro_login">LOGIN</string>
    <string name="signin_username">USERNAME</string>
    <string name="signin_password">PASSWORD</string>
    <string name="signin_skip">Skip to Local</string>
    <string name="card_view_list_name">Name</string>
    <string name="card_view_list_userid">Username</string>
    <string name="change_passwor_currentpassword">Current Password</string>
    <string name="change_passwor_newpassword">New Password</string>
    <string name="default_fragment_greet">Welcome to Brime!!!</string>
    <string name="dialog_savenotes">SAVE YOUR NOTE</string>
    <string name="dialog_public">Public</string>
    <string name="dialog_private">Private</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_label_warning_1">ARE YOU SURE YOU WANT TO DELETE? CORRESPONDING NOTES WILL BE TRASHED</string>
    <string name="dialog_label_warning_yes">Yes</string>
    <string name="dialog_label_warning_no">No</string>
    <string name="empty_notes_msg1">Oh.. it seems empty here</string>
    <string name="empty_notes_msg2">Click the (+) button to add your notes</string>
    <string name="get_started_1_text_1">NOTES ANYWHERE</string>
    <string name="get_started_1_text_2">Now Take Notes like Never  before</string>
    <string name="get_started_2_text_1">CAPTURE MOMENTS</string>
    <string name="get_started_2_text_2">Note Your Memories along with the moments</string>
    <string name="get_started_3_text_1">NEVER LOST</string>
    <string name="get_started_3_text_2">Your Notes Synced to the Cloud</string>
    <string name="get_started_4_text_1">SECURED</string>
    <string name="get_started_4_text_2">Notes are Encrypted and Secured</string>
    <string name="labels_addlabels">Add Label</string>
    <string name="main_exit">Exit</string>
    <string name="nav_header_guest">Guest</string>
    <string name="pref_header_accinfo">Account Info</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history
    </string>
    <string name="pref_header_signout">Sign Out</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_Aboutus">About Us</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_changepass">Change Password</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_share">Share App</string>
    <string name="pref_header_help">Help</string>

    <string-array name="lables_array">
        <item>Inspiration</item>
        <item>Personal</item>
        <item>Work</item>
    </string-array>

</resources>
