<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_public_notes"
            android:icon="@drawable/ic_insert_drive_file_black_24dp"
            android:title="@string/main_drawer_publicnotes" />
        <item
            android:id="@+id/nav_private_notes"
            android:icon="@drawable/ic_lock_outline_black_24dp"
            android:title="@string/main_drawer_priv_notes" />
        <item
            android:id="@+id/nav_labels"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/main_drawer_labels" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/main_drawer_trash" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/main_drawer_settings" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_cloud_upload_black_24dp"
            android:title="@string/main_drawer_cloudsync" />
    </group>
    <item android:title="@string/main_drawer_other">
        <menu>
            <item
                android:id="@+id/nav_explore"
                android:icon="@drawable/ic_cloud_upload_black_24dp"
                android:title="@string/main_drawer_explore" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/main_drawer_share" />
        </menu>
    </item>
</menu>
