<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Accounts">
        <Preference android:title="Account Info" android:key="accinfo"
            android:icon="@drawable/ic_account"
            android:summary="Your Information">
        </Preference>
        <Preference android:title="@string/pref_header_changepass" android:key="changepass"
            android:summary="Allows you to change password"
            android:icon="@drawable/ic_edit_black_24dp">

        </Preference>
        <Preference android:title="@string/pref_header_signout" android:key="signout"
            android:icon="@drawable/ic_signout_24dp">

        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Misc">

        <Preference android:title="Share" android:key="shareme"
            android:icon="@drawable/ic_menu_share"
            android:summary="Sharing is Caring ">

        </Preference>
        <Preference android:title="@string/pref_header_Aboutus" android:key="aboutus"
            android:icon="@drawable/ic_aboutus_24dp"
            android:summary="Know more about us.">

        </Preference>

        <Preference android:title="@string/pref_header_help" android:key="helpme"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:summary="Need some help ?">

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>