<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="150dp"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="12">


    <com.procleus.brime.utils.CustomTextView
        android:id="@+id/txt_dia"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:paddingLeft="5dp"
        android:paddingTop="16dp"
        android:text="@string/dialog_label_warning_1"
        android:textColor="#f9661c"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_gravity="center|bottom"
        android:layout_weight="6"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal">


        <com.procleus.brime.utils.CustomButton
            android:id="@+id/btn_yes_label"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:textColor="#f9661c"
            android:text="@string/dialog_label_warning_yes"

            android:textStyle="bold" />

        <com.procleus.brime.utils.CustomButton
            android:id="@+id/btn_no_label"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/dialog_label_warning_no"
            android:textColor="#f9661c"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
